--- a/frontend/resources/styles/main/partials/colorpicker.scss
+++ b/frontend/resources/styles/main/partials/colorpicker.scss
@@ -273,7 +273,7 @@
 
     .slider-selector.hue {
       grid-area: "hue";
-      align-self: end;
+      align-self: flex-end;
     }
 
     .slider-selector.opacity {
