--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1892,7 +1892,7 @@
 
     &.single-button {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       height: 1.5rem;
 
       .btn-wrapper {
