--- a/frontend/src/app/main/ui/components/select.scss
+++ b/frontend/src/app/main/ui/components/select.scss
@@ -27,7 +27,7 @@
   .dropdown-button {
     @include flexCenter;
     svg {
-      @extend .button-icon;
+      @extend .button-icon-small;
       transform: rotate(90deg);
       stroke: var(--icon-foreground);
     }
