--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
@@ -101,8 +101,7 @@
     .width {
       @extend .input-element;
       width: $s-108;
-      padding-left: $s-8;
-      y .icon-text {
+      .icon-text {
         padding-top: $s-1;
       }
       &.disabled {
@@ -128,7 +127,6 @@
     .y-position {
       @extend .input-element;
       width: $s-108;
-      padding-left: $s-8;
       .icon-text {
         padding-top: $s-1;
       }
@@ -145,7 +143,6 @@
     .rotation {
       @extend .input-element;
       width: $s-108;
-      padding-left: $s-8;
       .icon-text {
         padding-top: $s-1;
       }
@@ -160,7 +157,6 @@
         .radius-1 {
           @extend .input-element;
           width: $s-108;
-          padding-left: $s-8;
         }
         .radius-4 {
           display: grid;
@@ -169,7 +165,6 @@
           .small-input {
             @extend .input-element;
             width: $s-52;
-            padding-left: $s-8;
           }
         }
       }
