:sparkles: Use thumbnails instead of svgs for the list of components on swap

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -2669,7 +2669,7 @@
     align-items: center;
     margin-bottom: 0.5rem;
     cursor: pointer;
-    svg {
+    svg, img {
       background-color: $color-canvas;
       border-radius: $br4;
       border: 2px solid transparent;
