--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
@@ -13,7 +13,7 @@
   .color-info {
     display: flex;
     align-items: center;
-    gap: $s-1;
+    gap: $s-2;
     border-radius: $s-8;
     background-color: var(--input-details-color);
     height: $s-32;
@@ -39,16 +39,19 @@
         @include titleTipography;
         display: flex;
         align-items: center;
-        height: $s-32;
+        height: $s-28;
+        padding-left: $s-6;
+        border-radius: $br-8;
         width: 100%;
         flex-grow: 1;
         color: var(--input-foreground-color-active);
       }
       .detach-btn {
         @extend .button-tertiary;
-        height: $s-32;
+        height: $s-28;
         width: $s-28;
         border-radius: 0 $br-8 $br-8 0;
+        display: none;
         svg {
           @extend .button-icon;
         }
@@ -74,8 +77,11 @@
         .color-input-wrapper {
           background-color: var(--input-background-color-hover);
         }
-        .detach-btn svg {
-          stroke: var(--input-foreground-color-active);
+        .detach-btn {
+          display: flex;
+          svg {
+            stroke: var(--input-foreground-color-active);
+          }
         }
         &.editing {
           background-color: var(--input-background-color-active);
@@ -100,6 +106,9 @@
       .color-name {
         border-radius: 0 $br-8 $br-8 0;
       }
+    }
+    .library-name-wrapper {
+      border-radius: $br-8;
     }
     .opacity-element-wrapper {
       @extend .input-element;
