--- a/frontend/resources/styles/common/refactor/basic-rules.scss
+++ b/frontend/resources/styles/common/refactor/basic-rules.scss
@@ -75,6 +75,12 @@
       stroke: var(--button-primary-foreground-color-active);
     }
   }
+  &:global(.disabled) {
+    background-color: var(--button-background-color-disabled);
+    border: $s-1 solid var(--button-border-color-disabled);
+    color: var(--button-foreground-color-disabled);
+    cursor: unset;
+  }
 }
 
 .button-secondary {
@@ -118,6 +124,12 @@
       stroke: var(--button-secondary-foreground-color-active);
     }
   }
+  &:global(.disabled) {
+    background-color: var(--button-background-color-disabled);
+    border: $s-1 solid var(--button-border-color-disabled);
+    color: var(--button-foreground-color-disabled);
+    cursor: unset;
+  }
 }
 
 .button-tertiary {
@@ -160,6 +172,12 @@
     span svg {
       stroke: var(--button-tertiary-foreground-color-active);
     }
+  }
+  &:global(.disabled) {
+    background-color: var(--button-background-color-disabled);
+    border: $s-1 solid var(--button-border-color-disabled);
+    color: var(--button-foreground-color-disabled);
+    cursor: unset;
   }
 }
 
@@ -375,6 +393,26 @@
   }
 }
 
+.checkbox-icon {
+  @include flexCenter;
+  width: $s-16;
+  height: $s-16;
+  min-width: $s-16;
+  min-height: $s-16;
+  border-radius: $br-6;
+  background-color: var(--input-background-color);
+  svg {
+    display: none;
+  }
+  &:global(.checked) {
+    background-color: var(--input-border-color-active);
+    svg {
+      @extend .button-icon-small;
+      stroke: var(--input-details-color);
+    }
+  }
+}
+
 .input-checkbox {
   display: flex;
   align-items: center;
@@ -385,20 +423,7 @@
     gap: $s-6;
     cursor: pointer;
     span {
-      @include flexCenter;
-      width: $s-16;
-      height: $s-16;
-      min-width: $s-16;
-      min-height: $s-16;
-      border-radius: $br-6;
-      background-color: var(--input-background-color);
-      &:global(.checked) {
-        background-color: var(--input-border-color-active);
-        svg {
-          @extend .button-icon-small;
-          stroke: var(--input-details-color);
-        }
-      }
+      @extend .checkbox-icon;
     }
     input {
       margin: 0;
@@ -503,6 +528,28 @@
   display: grid;
   grid-template-areas: "name content";
   grid-template-columns: $s-92 1fr;
+}
+
+.comment-bubbles {
+  @include titleTipography;
+  @include flexCenter;
+  height: $s-32;
+  width: $s-32;
+  border-radius: $br-circle;
+  background-color: var(--comment-bullet-background-color-rest);
+  border: $s-1 solid var(--comment-bullet-border-color-rest);
+  color: var(--comment-bullet-foreground-color-rest);
+}
+
+.resolved-comment-bubble {
+  background-color: var(--comment-bullet-background-color-resolved);
+  border: $s-1 solid var(--comment-bullet-border-color-resolved);
+  color: var(--comment-bullet-foreground-color-resolved);
+}
+.unread-comment-bubble {
+  background-color: var(--comment-bullet-background-color-unread);
+  border: $s-1 solid var(--comment-bullet-border-color-unread);
+  color: var(--comment-bullet-foreground-color-unread);
 }
 
 // SELECTS AND DROPDOWNS
