:bug: Fix several fronted errors related with new UI (#3691)
* :bug: Fix title toggle arrow without content
* :bug: Fix export dropdowns
* :bug: Fix colorpicker eyedrop
* :bug: Fix hover state on color row
* :bug: Fix color bullet on color row
* :bug: Fix some css errors in new UI
* :bug: Fix text and typography component
* :bug: Fix some icons
* :lipstick: Update ui in feedback page, webhooks page and access token page

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -176,6 +176,7 @@
 
   --color-bullet-background-color: var(--white); // We don't want this color to change with palette
   --color-bullet-border-color: var(--color-background-quaternary);
+  --color-bullet-border-color-selected: var(--color-accent-primary);
   --palette-handler-background-color: var(--color-background-quaternary);
 
   --assets-title-background-color: var(--color-background-primary);
