--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/frame_grid.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/frame_grid.scss
@@ -7,6 +7,9 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  .title-spacing-board-grid {
+    padding-left: $s-12;
+  }
   .add-grid {
     @extend .button-tertiary;
     height: $s-32;
@@ -174,7 +177,6 @@
           .height {
             @extend .input-element;
             width: $s-108;
-            padding-left: $s-8;
             .icon-text {
               padding-top: $s-1;
             }
@@ -183,7 +185,6 @@
           .margin {
             @extend .input-element;
             width: $s-108;
-            padding-left: $s-8;
             .icon {
               &.rotated svg {
                 transform: rotate(90deg);
