--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
@@ -14,6 +14,9 @@
         width: $s-140;
       }
     }
+    .title-spacing-empty {
+      padding-left: $s-12;
+    }
   }
   .flex-element-menu {
     display: flex;
@@ -54,7 +57,6 @@
       .z-index-wrapper {
         @extend .input-element;
         width: $s-124;
-        padding-left: $s-8;
       }
     }
     .second-row {
@@ -90,7 +92,6 @@
             .horizontal-margin {
               @extend .input-element;
               width: $s-108;
-              padding-left: $s-8;
             }
           }
           .margin-multiple {
@@ -103,7 +104,6 @@
             .right-margin {
               @extend .input-element;
               width: $s-108;
-              padding-left: $s-8;
             }
           }
         }
@@ -124,7 +124,6 @@
         .layout-item-max-h {
           @extend .input-element;
           width: $s-108;
-          padding-left: $s-8;
           .icon-text {
             justify-content: flex-start;
             width: $s-80;
