--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/typography.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/typography.scss
@@ -13,6 +13,13 @@
   height: $s-32;
   width: 100%;
   border-radius: $br-8;
+  background-color: var(--assets-item-background-color);
+  color: var(--assets-item-name-foreground-color-hover);
+  &:hover,
+  &:focus-within {
+    background-color: var(--assets-item-background-color-hover);
+    color: var(--assets-item-name-foreground-color-hover);
+  }
 
   .typography-selection-wrapper {
     display: grid;
@@ -29,6 +36,7 @@
     .typography-sample {
       @include flexCenter;
       min-width: $s-24;
+      height: $s-32;
       color: var(--assets-item-name-foreground-color-hover);
     }
     .typography-name,
@@ -54,8 +62,27 @@
     border: $s-1 solid var(--assets-item-border-color);
   }
 
+  .element-set-actions {
+    display: flex;
+    visibility: hidden;
+    .element-set-actions-button,
+    .menu-btn {
+      @extend .button-tertiary;
+      height: $s-32;
+      width: $s-28;
+      svg {
+        @extend .button-icon;
+      }
+      &:active {
+        background-color: transparent;
+      }
+    }
+  }
   &:hover {
     background-color: var(--assets-item-background-color-hover);
+    .element-set-actions {
+      visibility: visible;
+    }
   }
 }
 
@@ -77,11 +104,14 @@
     width: $s-24;
     height: 100%;
     font-size: $fs-16;
+    color: var(--assets-item-name-foreground-color-hover);
   }
   .adv-typography-name {
     @include removeInputStyle;
-    color: var(--input-foreground-color);
+    font-size: $fs-12;
+    color: var(--input-foreground-color-active);
     flex-grow: 1;
+    padding-left: $s-6;
     margin: 0;
   }
   .action-btn {
@@ -92,6 +122,9 @@
     svg {
       @extend .button-icon-small;
       stroke: var(--icon-foreground);
+    }
+    &:active {
+      background-color: transparent;
     }
   }
   &:focus-within {
@@ -109,9 +142,111 @@
   height: 100%;
   width: 100%;
   background-color: var(--assets-title-background-color);
+  .typography-info-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: $s-4;
+    margin-bottom: $s-12;
+    .typography-name-wrapper {
+      @extend .asset-element;
+      display: grid;
+      grid-template-columns: $s-24 auto 1fr $s-28;
+      flex: 1;
+      height: $s-32;
+      width: 100%;
+      padding: 0 0 0 $s-12;
+      background-color: var(--assets-item-background-color-hover);
+      margin-bottom: $s-4;
+      .typography-sample {
+        @include flexCenter;
+        min-width: $s-24;
+        font-size: $fs-16;
+        height: $s-32;
+        padding: 0;
+        color: var(--assets-item-name-foreground-color-hover);
+      }
+      .typography-name {
+        @include titleTipography;
+        @include textEllipsis;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin-left: $s-6;
+        color: var(--assets-item-name-foreground-color-hover);
+      }
+      .typography-font {
+        @include titleTipography;
+        @include textEllipsis;
+        margin-left: $s-6;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        min-width: 0;
+        color: var(--assets-item-name-foreground-color);
+      }
+      .action-btn {
+        @extend .button-tertiary;
+        width: $s-28;
+        height: $s-32;
+        svg {
+          @extend .button-icon;
+        }
+        &:active {
+          background-color: transparent;
+        }
+      }
+    }
+
+    .info-row {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      height: $s-32;
+      --calcualted-width: calc(var(--width) - $s-48);
+      padding-left: $s-2;
+      .info-label {
+        @include titleTipography;
+        @include textEllipsis;
+        width: calc(var(--calcualted-width) / 2);
+        padding-top: $s-8;
+        color: var(--assets-item-name-foreground-color);
+      }
+      .info-content {
+        @include titleTipography;
+        @include textEllipsis;
+        padding-top: $s-8;
+        width: calc(var(--calcualted-width) / 2);
+        color: var(--assets-item-name-foreground-color-hover);
+      }
+    }
+
+    .link-btn {
+      @include tabTitleTipography;
+      @extend .button-secondary;
+      width: 100%;
+      height: $s-32;
+      border-radius: $br-8;
+      &:hover {
+        background-color: var(--button-secondary-background-color-hover);
+        color: var(--button-secondary-foreground-color-hover);
+        border: $s-1 solid var(--button-secondary-border-color-hover);
+        text-decoration: none;
+        svg {
+          stroke: var(--button-secondary-foreground-color-hover);
+        }
+      }
+      &:focus {
+        background-color: var(--button-secondary-background-color-focus);
+        color: var(--button-secondary-foreground-color-focus);
+        border: $s-1 solid var(--button-secondary-border-color-focus);
+        svg {
+          stroke: var(--button-secondary-foreground-color-focus);
+        }
+      }
+    }
+  }
 }
 
-.typography-options {
+.text-options {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -129,7 +264,7 @@
       height: $s-28;
       width: $s-28;
       svg {
-        @extend .button-icon;
+        @extend .button-icon-small;
         stroke: var(--icon-foreground);
         transform: rotate(90deg);
       }
@@ -151,13 +286,11 @@
         height: $s-32;
         .numeric-input {
           @extend .input-base;
-          margin: 0;
-          padding: 0;
         }
         span {
           @include flexCenter;
           svg {
-            @extend .button-icon;
+            @extend .button-icon-small;
           }
         }
       }
@@ -166,7 +299,7 @@
         height: $s-28;
         min-width: $s-28;
         svg {
-          @extend .button-icon;
+          @extend .button-icon-small;
           stroke: var(--icon-foreground);
           transform: rotate(90deg);
         }
