--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -23,26 +23,57 @@
     flex-grow: 1;
     height: 100%;
     min-height: $s-32;
-    margin-left: $s-8;
     color: var(--title-foreground-color);
   }
   .title-only {
     margin-left: $s-8;
   }
 
-  .toggle-btn {
-    @include buttonStyle;
+  .title-wrapper {
     display: flex;
     align-items: center;
     flex-grow: 1;
     padding: 0;
     color: var(--title-foreground-color);
     stroke: var(--title-foreground-color);
-    .collased-icon {
+    .toggle-btn {
+      @include buttonStyle;
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      padding: 0;
+      color: var(--title-foreground-color);
+      stroke: var(--title-foreground-color);
+      .collapsabled-icon {
+        @include flexCenter;
+        height: $s-24;
+        border-radius: $br-8;
+        svg {
+          @extend .button-icon-small;
+          transform: rotate(90deg);
+          stroke: var(--icon-foreground);
+        }
+        &.rotated svg {
+          transform: rotate(0deg);
+        }
+      }
+      &:hover {
+        color: var(--title-foreground-color-hover);
+        stroke: var(--title-foreground-color-hover);
+        .title {
+          color: var(--title-foreground-color-hover);
+          stroke: var(--title-foreground-color-hover);
+        }
+        .collapsabled-icon svg {
+          stroke: var(--title-foreground-color-hover);
+        }
+      }
+    }
+    .collapsabled-icon {
+      @include buttonStyle;
       @include flexCenter;
       height: $s-24;
       border-radius: $br-8;
-
       svg {
         @extend .button-icon-small;
         transform: rotate(90deg);
@@ -56,10 +87,9 @@
       color: var(--title-foreground-color-hover);
       stroke: var(--title-foreground-color-hover);
       .title {
-        color: var(--title-foreground-color-hover);
         stroke: var(--title-foreground-color-hover);
       }
-      .collased-icon svg {
+      .collapsabled-icon svg {
         stroke: var(--title-foreground-color-hover);
       }
     }
