--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/exports.scss
@@ -8,6 +8,9 @@
 
 .element-set {
   .element-title {
+    .title-spacing-export {
+      padding-left: $s-12;
+    }
     .add-export {
       @extend .button-tertiary;
       height: $s-32;
@@ -54,15 +57,24 @@
         .format-select {
           width: $s-60;
           padding: 0;
+          .dropdown-upwards {
+            bottom: $s-36;
+            width: $s-80;
+            top: unset;
+          }
         }
         .size-select {
           width: $s-60;
           padding: 0;
+          .dropdown-upwards {
+            bottom: $s-36;
+            top: unset;
+            width: $s-80;
+          }
         }
         .suffix-input {
           @extend .input-element;
           min-width: $s-92;
-          padding: 0 $s-8;
           flex-grow: 1;
         }
       }
